@@ -1,3 +1,12 @@
+2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+	* device/lib/gbz80/__initrleblock.s,
+	  device/lib/gbz80/crt0.s,
+	  device/lib/gbz80/div.s,
+	  device/lib/gbz80/memcpy.s,
+	  device/lib/gbz80/mul.s,
+	  device/lib/gbz80/setjmp.s:
+	  Do some obvious asm improvements for gbz80's stdlib.
+
 2021-03-10 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
